Material menu is now click-to-toggle because the hover effect was getting annoying.

--- a/client/layouts/app/app.html
+++ b/client/layouts/app/app.html
@@ -9,7 +9,9 @@
     </div>
 
     {{#if currentUser}}
-
+      {{#if verify currentUser }}
+        {{> deleteTileConfirmation }}
+      {{/if}}
     {{else}}
       {{> loginModal }}
     {{/if}}
