Tooltips have a background, are more readable.

--- a/tiles.less
+++ b/tiles.less
@@ -48,6 +48,8 @@ html {
   height: 100%;
   max-height: 100%;
 }
+
+/*    Material Menu & Tooltip Styles   */
 .fixed-action-btn ul {
   bottom: 45px !important;
 }
@@ -64,7 +66,13 @@ ul.closed > li > .btn-floating {
 }
 .tooltip {
   z-index: 10;
+  color: #fff;
+  background-color: #263238;
+  padding: 10px;
+  border-radius: 5px;
 }
+
+
 .red-btn {
   background-color: @lightRed;
 }
