Fixes #61, multiple style, size and colour updates

--- a/client/views/navbar/navbar.html
+++ b/client/views/navbar/navbar.html
@@ -1,5 +1,5 @@
 <template name="navbar">
-  <nav>
+  <nav class="z-depth-1">
     <div class="nav-wrapper">
       {{ > UI.contentBlock
           context=__context__ }}
