--- a/client/views/tile/tile.html
+++ b/client/views/tile/tile.html
@@ -1,5 +1,5 @@
 <template name="tileSmall">
-  <div data-id="{{tile._id}}" class="card tile" style="border-color: {{tile.color}}; background-color: {{tile.color}};">
+  <div data-id="{{tile._id}}" class="card tile z-depth-2" style="border-color: {{tile.color}}; background-color: {{tile.color}};">
     <div class="tile-content pointer">
       <div class="tile-title">{{tile.title}}</div>
       {{#if hasDates tile}}
