--- a/global-less.less
+++ b/global-less.less
@@ -2,7 +2,7 @@
 @lightGrey: #eee;
 @lightBlue: #368afa;
 @lightRed: #f18789;
-@lightGreen: #97bb71;
+@lightGreen: #4caf50;
 
 @darkGrey: #aaa;
 @darkishGrey: #ccc;
