--- a/tiles.less
+++ b/tiles.less
@@ -64,6 +64,15 @@ ul.closed > li > .btn-floating {
   transform: scaleY(0.4) scaleX(0.4) translateY(40px) !important;
   opacity: 0 !important;
 }
+.menu-icon {
+  transition: all 300ms ease-in-out;
+}
+.menu-icon > i {
+  font-size: 2.4rem !important;
+}
+.menu-icon-open {
+  transform: rotateY(180deg);
+}
 .tooltip {
   z-index: 10;
   color: #fff;
