Implemented pfafman's MaterializeModal package, #41 almost complete.

--- a/client/views/tile/tile.html
+++ b/client/views/tile/tile.html
@@ -22,7 +22,7 @@
           </p>
         {{/if}}
         <p>
-          <a class="tile-read-more" href="#{{tile._id}}">read more</a>
+          <a class="tile-read-more" href="/{{publicURL}}/{{tile._id}}">read more</a>
         </p>
       {{/unless}}
     </div>
