Modified modal displays.  Modified toggle menu icon behaviour.

--- a/client/views/modals/modals.less
+++ b/client/views/modals/modals.less
@@ -1,20 +1,10 @@
 @import "global-less";
 
 /*    Modal styles    */
-#tile-edit-modal,
-#tile-view-modal {
-  width: 80%;
-  max-height: 80%;
-  height: 80%;
-}
-
-#tile-view-modal {
-  background: transparent !important;
-}
-
+/*
 .modal {
   padding: 0;
-  padding-top: 20px;
+  background-color: transparent;
 }
 .modal-content {
   padding: 20px;
@@ -33,7 +23,7 @@
 .modal-fixed-footer .modal-footer {
   position: fixed;
   bottom: 0;
-}
+}*/
 .modal-footer button {
   float: right;
   margin: 5px !important;
