--- a/client/views/tile/tile.html
+++ b/client/views/tile/tile.html
@@ -44,6 +44,7 @@
         {{{textToHTML tile.content}}}
       </div>
     </div>
+    <!--
     {{#unless preview}}
       <div class="modal-footer">
         <button id="close-view-modal" type="button" class="btn waves-effect waves-light modal-action modal-close grey"><i class="mdi-action-done left"></i>Done</button>
@@ -51,6 +52,6 @@
           <div class="indeterminate"></div>
         </div>
       </div>
-    {{/unless}}
+    {{/unless}}-->
   </div>
 </template>
