--- a/client/views/all-tiles/all-tiles.html
+++ b/client/views/all-tiles/all-tiles.html
@@ -34,8 +34,8 @@
 <template name="allTilesControls">
   <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
     {{#if currentUser}}
-      <a data-toggle-menu class="btn-floating btn-large blue z-depth-2 menu-icon {{#if open}}menu-icon-open{{/if}}"  data-tooltip-direction="w" data-tooltip="Menu">
-        <i class="mdi-{{#if open}}navigation-close{{else}}navigation-menu{{/if}}"></i>
+      <a data-toggle-menu class="btn-floating btn-large blue z-depth-2 menu-icon"  data-tooltip-direction="w" data-tooltip="Menu">
+        <i class="mdi-navigation-menu {{#if open}}open{{/if}}"></i>
       </a>
       <ul class="{{#if open}}open{{else}}closed{{/if}}">
         <li>
