--- a/tiles.less
+++ b/tiles.less
@@ -65,13 +65,13 @@ ul.closed > li > .btn-floating {
   opacity: 0 !important;
 }
 .menu-icon {
-  transition: all 300ms ease-in-out;
 }
 .menu-icon > i {
+  transition: all 300ms ease-in-out;
   font-size: 2.4rem !important;
 }
-.menu-icon-open {
-  transform: rotateY(180deg);
+.menu-icon > i.open {
+  transform: rotateZ(270deg);
 }
 .tooltip {
   z-index: 10;
