Got rid of old modals system, rendering turnkey, deletion, and tileBig templates using MaterializeModals.  Closes #41

--- a/client/views/all-tiles/all-tiles.html
+++ b/client/views/all-tiles/all-tiles.html
@@ -23,7 +23,7 @@
 </template>
 
 <template name="category">
-  <div class="category-title valign-wrapper" style="color: {{category.color}};">
+  <div class="category-title valign-wrapper z-depth-1" style="color: {{category.color}};">
     <div class="category-title-text">{{category.title}}</div>
   </div>
   {{#each tiles}}
