--- a/client/views/tile/tile.less
+++ b/client/views/tile/tile.less
@@ -11,21 +11,25 @@
   border-radius: 10px;
   text-align: left;
   transition: border-color 0.5s ease;
+  overflow: visible;
 }
 .tile-placeholder {
   opacity: 0.5;
+}
+.tile .tile-content-anchor {
+  text-decoration: none;
+  color: inherit;
 }
 .tile .tile-content {
   padding: 10px;
   max-height: calc(~"@{tileHeight} - 50px");
   width: 100%;
   overflow: hidden;
-  box-shadow: inset 0 0 2px #001325;
   background-color: #fff;
   border-radius: 5px;
 }
 .tile .tile-content:hover {
-  box-shadow: inset 0 0 10px #001325;
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .tile .tile-title {
   font-weight: 600;
@@ -69,4 +73,28 @@
 .tile-action p a:hover i {
   opacity: 1;
   color: #fff;
+}
+
+
+#tile-big {
+  border-top-style: solid;
+  border-width: 10px;
+  border-radius: 5px;
+  height: 100%;
+  background-color: #eee;
+  padding: 1px;
+}
+#tile-big .modal-content {
+  padding-left: 45px;
+  padding-right: 45px;
+}
+#tile-big .title {
+  font-size: 26px;
+}
+#tile-big .dates {
+  color: @darkGrey;
+  font-size: 20px;
+}
+#tile-big .content {
+  margin-top: 20px;
 }
