Refactored Material controls to an app-level dynamic template target.

--- a/client/layouts/app/app.html
+++ b/client/layouts/app/app.html
@@ -5,7 +5,8 @@
       {{> Template.dynamic template=main }}
     </div>
 
+    {{> Template.dynamic template=controls }}
     {{> tooltips }}
-    
+
   {{/if}}
 </template>
