Moved controls back to a by-template injection, remain refactored into separate `/view` folder.  Tile Sorting is working (#49 #22).

--- a/client/views/all-tiles/all-tiles.html
+++ b/client/views/all-tiles/all-tiles.html
@@ -5,6 +5,7 @@
       {{> categories sortedCategories=sortedCategories sortedTiles=sortedTiles search=search }}
     </div>
   </div>
+  {{> allTilesControls }}
 </template>
 
 <template name="categories">
