Implemented Category & Tile sorting, canceling & removed right-menu.  Closes #22, closes #49

--- a/client/views/controls/all-tiles-controls/all-tiles-controls.html
+++ b/client/views/controls/all-tiles-controls/all-tiles-controls.html
@@ -1,10 +1,10 @@
 <template name="allTilesControls">
   {{#if currentlySorting}}
     {{#if currentlySortingTiles }}
-      {{> confirmTileSort sortingTiles=sortingTiles }}
+      {{> confirmTileSort }}
     {{/if}}
     {{#if currentlySortingCategories }}
-      {{> confirmCategorySort sortingCategories=sortingCategories }}
+      {{> confirmCategorySort }}
     {{/if}}
   {{else}}
     <!--  Generic Tile Menu  -->
