Sort icons are dimmed when there aren't enough objects to sort.  Closes #67

--- a/client/views/all-tiles/all-tiles.html
+++ b/client/views/all-tiles/all-tiles.html
@@ -5,7 +5,7 @@
       {{> categories sortedCategories=sortedCategories sortedTiles=sortedTiles search=search }}
     </div>
   </div>
-  {{> allTilesControls }}
+  {{> allTilesControls disableTileSort=underTwoTiles disableCategorySort=underTwoCategories }}
 </template>
 
 <template name="categories">
