--- a/tiles.less
+++ b/tiles.less
@@ -11,6 +11,12 @@ html {
 }
 
 /*  Global classes  */
+.disabled {
+  background-color: #DFDFDF !important;
+  box-shadow: none !important;
+  color: #9F9F9F !important;
+  cursor: default !important;
+}
 .flex-row {
   display: flex;
   flex-direction: row;
