--- a/client/views/not-found/not-found.less
+++ b/client/views/not-found/not-found.less
@@ -1,13 +1,18 @@
-#notFound {
-  color: #fff;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  text-align: center;
-  padding: 10%;
-  font-size: 72px;
-  font-weight: 700;
-  background-image: url("/mind_blown.gif");
-  background-repeat: repeat;
+@import "global-less";
+
+#not-found-container {
   height: 100%;
-  width: 100%;
-  overflow-y: auto;
+  text-align: center;
+}
+#not-found-container > div {
+  margin: 0 auto;
+}
+#not-found-blockquote {
+  border-color: @lightRed;
+}
+#not-found-message {
+  color: @darkGrey;
+}
+#not-found-context {
+  text-align: left;
 }
