Replaced LESS autoprefixer with a better one.

--- a/client/views/not-found/not-found.less
+++ b/client/views/not-found/not-found.less
@@ -4,7 +4,7 @@
   height: 100%;
   text-align: center;
 }
-#not-found-container > div {
+#not-found-container > div.valign {
   margin: 0 auto;
 }
 #not-found-blockquote {
