--- a/client/views/all-tiles/all-tiles.html
+++ b/client/views/all-tiles/all-tiles.html
@@ -25,6 +25,7 @@
     {{#each sortedCategories}}
       {{> category category=this tiles=../sortedTiles}}
     {{/each}}
+    <div class="category-title valign-wrapper" style="color: hsl(0, 65%, 50%);"></div>
   {{/if}}
 </template>
 
