`Template.tileBig` is a bit cleaner; no longer fullscreen.

--- a/client/modals.less
+++ b/client/modals.less
@@ -1,11 +1,16 @@
 @import "global-less";
 
 /*    Modal styles    */
-/*
 .modal {
-  padding: 0;
-  background-color: transparent;
+  border-radius: 10px;
 }
+.modal .modal-content {
+  padding: 0;
+}
+p.modal-body {
+  margin: 0;
+}
+/*
 .modal-content {
   padding: 20px;
   height: calc(~"100% - 67px") !important;
