--- a/client/views/tile/tile.html
+++ b/client/views/tile/tile.html
@@ -33,7 +33,7 @@
 
 <template name="tileBig">
   <div id="tile-big" style="border-color: {{tile.color}}">
-    <div class="modal-content">
+    <div class="">
       <div class='title'>
         {{tile.title}}
       </div>
