Fixed issue with sorting not working due to new right-most vertical spacer column.  Registration pages now properly redirect users once logged in.

--- a/tiles.less
+++ b/tiles.less
@@ -211,7 +211,8 @@ input[type=date]::-webkit-inner-spin-button {
   overflow-x: hidden;
   overflow-y: auto;
 }
-.category-title {
+.category-title,
+.vertical-spacer {
   height: 100%;
   width: 45px;
   margin-left: 10px;
