--- a/client/views/establish-url/establish-url.html
+++ b/client/views/establish-url/establish-url.html
@@ -1,18 +1,19 @@
 <template name="establishURL">
   {{> setupNavbar }}
-  <div id="setup-instructions" class="center">
-    {{#if currentUser.profile.public_url}}
-      If we must, we must.
-    {{else}}
-      Alright, "{{currentUser.profile.name}}", if that <i>is</i> your real name.<br/>You've made it this far.  Now it's time to choose a URL:
-    {{/if}}
-  </div>
-  <form id="verify-url">
-    <span id="url-stub">http://{{hostname}}/</span>
-    <div class="input-field">
-      <input id="user-url" type="text"/>
-      <label for="user-url">Public URL</label>
+  <div id="setup-instructions" class="valign-wrapper">
+    <div class="valign">
+      {{#if currentUser.profile.public_url}}
+        If we must, we must.
+      {{else}}
+        Alright, "{{currentUser.profile.name}}", if that <i>is</i> your real name.<br/>You've made it this far.  Now it's time to choose a URL:
+      {{/if}}
+      <form id="verify-url">
+        <div class="input-field">
+          <input id="user-url" type="text" value="{{currentUser.profile.public_url}}"/>
+          <label for="user-url">Public URL</label>
+        </div>
+      </form>
     </div>
-  </form>
+  </div>
   {{> confirmCancelControls cancelCondition=currentUser.profile.public_url }}
 </template>
