--- a/client/views/establish-url/establish-url.less
+++ b/client/views/establish-url/establish-url.less
@@ -2,37 +2,23 @@
 
 #setup-instructions {
   font-size: 30px;
-  margin: 0 auto;
-  padding: 10%;
+  height: calc(~"100% - 64px");
+  padding-top: 64px;
 }
+#setup-instructions > div.valign {
+  margin: 0 auto;
+}
+
 #verify-url {
   width: 100%;
-  padding: 10%;
-  font-size: 30px;
   position: relative;
   margin: 0 auto;
-  margin-bottom: 15px;
-}
-#verify-url button {
-  margin: 5px;
-  float: right;
-  font-size: 18px;
-}
-#url-stub {
-  color: @darkGrey;
-  position: absolute;
-  top: 0;
-  right: calc(~"50% + 5px");
+  margin-top: 15px;
 }
 #verify-url > .input-field {
-  position: absolute;
-  width: 50%;
-  left: 50%;
-  top: 0;
   margin: 0;
 }
 #verify-url > .input-field > input {
-  font-size: 30px;
   border: none !important;
   box-shadow: none !important;
 }
