--- a/tiles.less
+++ b/tiles.less
@@ -30,6 +30,14 @@ html {
   justify-content: flex-start;
   align-items: flex-start;
 }
+.flex-center {
+  justify-content: center;
+  align-content: center;
+}
+.flex-around {
+  justify-content: space-around;
+  align-content: space-around;
+}
 #home-container {
   height: 100%;
 }
