--- a/client/views/turnkey/turnkey.less
+++ b/client/views/turnkey/turnkey.less
@@ -2,13 +2,9 @@
 
 /*  login styles    */
 #login-container {
-  max-width: 500px;
   margin: auto;
   height: 100%;
 }
-/*#login-modal {
-  max-width: 500px;
-}*/
 #login-title {
   padding-bottom: 20px;
   padding-left: 40px;
@@ -30,48 +26,32 @@
 #social-login-container {
   z-index: 1001;
 }
-.or-divider {
-  margin: 0 auto;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  font-weight: 600;
-  text-transform: uppercase;
-  color: @darkGrey;
+.vertical-divider {
+  width: 1px;
+  background-color: @darkishGrey;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+@media (max-width: 582px) {
+  .vertical-divider {
+    width: 100%;
+    height: 1px;
+  }
 }
 
 
 /*  registration styles */
 #register-form-container {
-  max-width: 500px;
   margin: auto;
   height: 100%;
 }
 .turnkey-options {
+  max-width: 500px;
   padding: 10px;
-  min-width: 500px;
   position: relative;
   border: 1px solid @darkishGrey;
 }
-.turnkey-options > .left {
-  text-align: center;
-  width: calc(~"50% - 20px");
-  height: calc(~"100% - 20px");
-  position: absolute;
-}
-#register-form-container > .turnkey-options > .left {
-  padding-bottom: 50px;
-}
-.turnkey-options > .right {
-  width: 50%;
-  padding-left: 10px;
-  border-left: 1px solid @darkishGrey;
-}
-.turnkey-options > .left > #social-login-container {
-  width: 100%;
-}
-.turnkey-options > .left button {
+#social-login-container button {
   display: block;
-}
-.turnkey-options button {
   margin: 15px auto;
 }
