--- a/tiles.less
+++ b/tiles.less
@@ -11,6 +11,9 @@ html {
 }
 
 /*  Global classes  */
+#home-container {
+  height: 100%;
+}
 .disabled {
   background-color: #DFDFDF !important;
   box-shadow: none !important;
@@ -38,9 +41,6 @@ html {
   justify-content: space-around;
   align-content: space-around;
 }
-#home-container {
-  height: 100%;
-}
 .centered-container {
   width: 100%;
   display: flex;
@@ -61,6 +61,12 @@ html {
 .max-height {
   height: 100%;
   max-height: 100%;
+}
+.grabbable {
+  cursor: grab;
+}
+.grabbable:active {
+  cursor: grabbing;
 }
 
 
