--- a/client/views/edit-tile/edit-tile.less
+++ b/client/views/edit-tile/edit-tile.less
@@ -1,5 +1,30 @@
 @import "global-less";
 
+.big-tile-edit-pane {
+  padding: 20px;
+}
+
+/*  Summer Rich Text Editor Styles  */
+.note-editor {
+  border: none;
+}
+.note-editor .note-toolbar {
+  border: none;
+  padding: 5px;
+  background-color: transparent;
+}
+.note-toolbar .btn {
+  margin: 2px;
+}
+.note-toolbar .btn i {
+  font-size: 1em;
+}
+
+
+
+
+
+
 #edit-panel {
   margin: 0 auto;
   height: calc(~"100% - @{navbarHeight}");
