--- a/client/views/controls/all-tiles-controls/all-tiles-controls.less
+++ b/client/views/controls/all-tiles-controls/all-tiles-controls.less
@@ -1,6 +1,8 @@
 /*    Material Menu & Tooltip Styles   */
 .fixed-action-btn ul {
   bottom: 45px !important;
+  list-style-type: none;
+  margin-left: 0;
 }
 ul.open > li > .btn-floating {
   transform: scaleY(1) scaleX(1) translateY(0px) !important;
