--- a/client/views/edit-tile/edit-tile.less
+++ b/client/views/edit-tile/edit-tile.less
@@ -1,7 +1,8 @@
 @import "global-less";
 
-.big-tile-edit-pane {
-  padding: 20px;
+#big-tile-edit-pane {
+  padding: 10px;
+  padding-top: 20px;
 }
 
 /*  Summer Rich Text Editor Styles  */
@@ -19,7 +20,9 @@
 .note-toolbar .btn i {
   font-size: 1em;
 }
-
+.note-editor {
+  margin: 10px;
+}
 
 
 
