--- a/client/views/tile/tile.html
+++ b/client/views/tile/tile.html
@@ -9,7 +9,7 @@
           </div>
         {{/if}}
         <div class="tile-body">
-          {{{textToHTML tile.preview}}}
+          {{{tile.content}}}
         </div>
       </div>
     </a>
@@ -43,7 +43,7 @@
         </div>
       {{/if}}
       <div class='content'>
-        {{{textToHTML tile.content}}}
+        {{{tile.content}}}
       </div>
     </div>
     <!--
