Edit Tile screen now has fixed footer.

--- a/client/views/edit-tile/edit-tile.html
+++ b/client/views/edit-tile/edit-tile.html
@@ -13,7 +13,8 @@
     <div id="tile-edit-content">{{{tile.content}}}</div>
   </div>
   <div class="modal-footer">
-    <button data-save-tile class="btn waves-effect waves-light modal-action red"><i class="mdi-content-save"></i>Save</button>
+    <button data-cancel-tile class="btn waves-effect waves-light modal-action grey">Cancel</button>
+    <button data-save-tile class="btn waves-effect waves-light red">Save</button>
   </div>
 </template>
 
