--- a/client/views/edit-tile/edit-tile.less
+++ b/client/views/edit-tile/edit-tile.less
@@ -1,8 +1,13 @@
 @import "global-less";
 
 #big-tile-edit-pane {
-  padding: 10px;
-  padding-top: 20px;
+  padding: 20px;
+}
+.modal .modal-footer {
+  text-align: right;
+}
+.modal .modal-footer button.btn {
+  float: none;
 }
 
 /*  Summer Rich Text Editor Styles  */
@@ -15,13 +20,18 @@
   background-color: transparent;
 }
 .note-toolbar .btn {
-  margin: 2px;
+  box-shadow: none;
 }
 .note-toolbar .btn i {
   font-size: 1em;
 }
+.note-color .btn i {
+  line-height: 1em;
+  padding: 5px;
+  border-radius: 50%;
+}
 .note-editor {
-  margin: 10px;
+
 }
 
 
