--- a/client/views/turnkey/turnkey.less
+++ b/client/views/turnkey/turnkey.less
@@ -29,13 +29,13 @@
 .vertical-divider {
   width: 1px;
   background-color: @darkishGrey;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin:  0 10px 0 10px;
 }
 @media (max-width: 582px) {
   .vertical-divider {
     width: 100%;
     height: 1px;
+    margin: 10px 0 10px 0;
   }
 }
 
