--- a/tiles.less
+++ b/tiles.less
@@ -11,7 +11,7 @@ html {
   font-size: inherit; /* overrides bootstrap  */
 }
 ul {
-  list-style-type: circle;
+  list-style-type: disc;
   margin-left: 20px;
 }
 ul li {
@@ -254,4 +254,13 @@ input[type=date]::-webkit-inner-spin-button {
   position: absolute;
   top: 30px;
   right: 5px;
+}
+
+
+/*  Modals    */
+.materialize-modal.full-screen {
+  padding: 0;
+}
+.materialize-modal.full-screen .modal-content {
+  height: 100%;
 }
