Removed old editTile route and template.

--- a/client/views/edit-tile/edit-tile.less
+++ b/client/views/edit-tile/edit-tile.less
@@ -19,7 +19,8 @@
   padding: 5px;
   background-color: transparent;
 }
-.note-toolbar .btn {
+.note-toolbar .btn,
+.note-popover .btn {
   box-shadow: none;
 }
 .note-toolbar .btn i {
