--- a/client/views/manage-data/manage-data.html
+++ b/client/views/manage-data/manage-data.html
@@ -1,5 +1,17 @@
 <template name="manageData">
   <div>
-    <button data-export type="button">Export</button>
+    <div>
+      <button data-export type="button">Export</button>
+    </div>
+    <div>
+      <div class="file-field input-field">
+        <input class="file-path validate" type="text"/>
+        <div class="btn">
+          <span>Upload</span>
+          <input data-import-file type="file" />
+        </div>
+      </div>
+      <button data-import type="button">Import</button>
+    </div>
   </div>
 </template>
