--- a/client/views/controls/all-tiles-controls/all-tiles-controls.html
+++ b/client/views/controls/all-tiles-controls/all-tiles-controls.html
@@ -36,7 +36,7 @@
               </a>
             </li>
             <li>
-              <a data-manage-data class="btn-floating indigo z-depth-2 {{#if disableCategorySort}}disabled{{/if}}" data-tooltip-direction="w" data-tooltip="Manage Data">
+              <a data-manage-data class="btn-floating indigo z-depth-2" data-tooltip-direction="w" data-tooltip="Manage Data">
                 <i class="mdi-content-archive"></i>
               </a>
             </li>
