Updated Manage Data icon to not indicate direction (could apply to importing or exporting)

--- a/client/views/controls/all-tiles-controls/all-tiles-controls.html
+++ b/client/views/controls/all-tiles-controls/all-tiles-controls.html
@@ -37,7 +37,7 @@
             </li>
             <li>
               <a data-manage-data class="btn-floating indigo z-depth-2" data-tooltip-direction="w" data-tooltip="Manage Data">
-                <i class="mdi-content-archive"></i>
+                <i class="mdi-file-attachment"></i>
               </a>
             </li>
           {{else}}
