Removed Bootstrap entirely.

--- a/client/views/tile/tile.less
+++ b/client/views/tile/tile.less
@@ -28,6 +28,9 @@
   background-color: #fff;
   border-radius: 5px;
 }
+.tile .tile-content p {
+  margin: initial;
+}
 .tile .tile-content:hover {
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
